--- a/default.css
+++ b/default.css
@@ -174,6 +174,8 @@ a{
 /*Right column(My picture with JS buttons)*/
 .Intro-Right{
 	grid-area: Intro-Right;
+	display: grid;
+	align-content: center;
 	padding-top: 50px;
 	padding-bottom: 50px;
 }
