--- a/default.css
+++ b/default.css
@@ -255,3 +255,20 @@ a{
 	width: 95%;
 	}
 }
+
+.about-text{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); 
+	gap: 100px;
+}
+
+#skills{
+	display: flex;
+	justify-content: space-evenly;
+	background-color: #f0ead6; 
+}
+
+.links-to-social-media{
+	display: grid;
+	text-align: center;
+}
