--- a/default.css
+++ b/default.css
@@ -11,6 +11,8 @@
 	--DotChangeColor: #D8BFD8;
 
 	--Color1-2: #FFF5EE;
+
+	--btnColor: black;
 }
 
 
@@ -272,3 +274,44 @@ a{
 	display: grid;
 	text-align: center;
 }
+
+#submit-btn{
+	margin-top: 10px;
+	width: 100%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	color: #fff;
+	background-color: var(--btnColor);
+	border: none;
+}
+
+#contact_form{
+	display: block;
+	max-width: 600px;
+	margin: 0 auto;
+	border: 1px solid var(--borderCoror);
+	padding: 15px;
+	border-radius: 5px;
+	background-color: var(--mainColor);
+	margin-bottom: 50px;
+}
+
+#contact_form textarea{
+	min-height: 100px;
+	font-size: 14px;
+}
+
+#contact_form input{
+	border-radius: 3px;
+}
+
+.input-field{
+	width: 100%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: var(--secondColor);
+	border-radius: 5px;
+	border: 1px solid var(--borderColor);
+	font-size: 14px;
+}
+
