--- a/default.css
+++ b/default.css
@@ -171,6 +171,10 @@ a{
 	position: relative;
 }
 
+.about-text{
+	padding-bottom: 50px;
+}
+
 #shadow_AboutMe{
 	background-color: #f0ead6;
 	width: 300px;
@@ -256,6 +260,42 @@ a{
 	display: inline-block;
 	margin-right: 5px;
 	margin-left: 5px;
+}
+
+.post-wrapper{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, 320px);
+	gap:20px;
+	justify-content: center;
+	padding-bottom: 50px;
+}
+
+.post{
+	border: 1px solid var(--borderColor);
+	-webkit-box-shadow: -9px 0px 24px 0px rgba(66, 68, 90, 1);
+	-moz-box-shadow: -9px 0px 24px 0px rgba(66, 68, 90, 1);
+	box-shadow: -9px 0px 24px 0px rgba(66, 68, 90, 1);
+}
+
+.post-title{
+	color: black;
+	margin: 0;
+}
+
+.post-intro{
+	color: black;
+}
+
+.post-prewiew{
+	background-color: #fff;
+	padding: 15px;
+}
+
+.potrfolio{
+	display: block;
+	width: 100%;
+	height:180px;
+	object-fit: cover;
 }
 
 @media screen and (max-width: 1200px){
