added contact form with django(static files are need to be configured)

--- a/django/project/contact_form/templates/contact_form/contact_form.html
+++ b/django/project/contact_form/templates/contact_form/contact_form.html
@@ -1,23 +1,12 @@
-    <!DOCTYPE HTML>
-<html>
- <head>
-  <title>Daniil Boiko</title>
-   <meta name="viewpoint" content="maximum-scale=1, minimum-scale=1" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&family=Questrial&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" type="text/css" href="default.css">
-
-    <link id = "theme-style" rel="stylesheet" type="text/css" href="">
- </head>
- <body>
-        <section class = 's1'>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Daniil Boika</title>
+</head>
+<body>
+{% load static %}
+<section class = 's1'>
                 <div class = 'main'>
 
                     <div class="hello">
@@ -42,7 +31,7 @@
                                     <div id="About_Me">
                                         <div id = "corner_n1" class = "corner"></div>
                                         <div id = "corner_n2" class = "corner"></div>
-                                        <h3>What i'm doing?</h1>
+                                        <h1>What i'm doing?</h1>
                                         <p>I'm Python developer</p>
                                         <div id = "corner_n3" class = "corner"></div>
                                         <div id = "corner_n4" class = "corner"></div>
@@ -99,7 +88,7 @@
                     </div>
 
                 </div>
-                
+
                 <div class="links-to-social-media">
 
                     <h3>Find On Social Smth</h3>
@@ -144,7 +133,7 @@
                     </div>
                         <div>
                             <div class="post">
-                                <img class = "potrfolio" src="img/bot.png">
+                                <img class = "potrfolio" src="{% static 'img/bot.png' %}">
                                 <div class="post-prewiew">
                                     <h6 class="post-title">Bot-moderator for Telgeram</h6>
                                     <p class="post-intro">Bot moderator, using aiogram, to moderate chats in Telegram</p>
@@ -158,33 +147,12 @@
             </div>
         </section>
 
-        <section class = 's2'>
-            <div class="main">
-                <h3 style="text-align: center;">Contact form</h3>
-
-
-                <form id = "contact_form">
-
-                    <a name="contact"></a>
-
-                    <label>Name</label>
-                    <input class="input-field" type="text" name="name">
-
-                    <label>Subject</label>
-                    <input class="input-field" type="text" name="subject">
-
-                    <label>Email</label>
-                    <input class="input-field" type="text" name="email">
-
-                    <label>Message</label>
-                    <textarea class="input-field" type="text" name="messgae"></textarea>
-                    
-                    <input id= "submit-btn" type="submit" value="Send">
-                </form>
-            </div>
-        </section>
+        <form method="POST">
+            {% csrf_token %}
+            {{ form }}
+            <input type="submit">
+        </form>
 
         <script type="text/javascript" src="script.js"></script>
-
- </body>
+</body>
 </html>
