--- a/django/project/contact_form/templates/contact_form/contact_form.html
+++ b/django/project/contact_form/templates/contact_form/contact_form.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&family=Questrial&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
 </head>
 <body>
@@ -34,7 +34,7 @@
                                     <div id='dot-3' class="browser-dot"></div>
                                 </div>
                                 <ul id="contacts">
-                                    <li><a id = "some_cont" href="contact_form.html#contact">Contact</a></li>
+                                    <li><a id = "some_cont" href="#">Contact</a></li>
                                 </ul>
                             </div>
 
@@ -53,13 +53,13 @@
 
                             <div class="Intro-Right">
                                 <img id='photo' src="{% static 'img/photo_3.jpg' %}">
-                                <h5 style="text-align: center;line-height: 0;">Some JS showcase</h5>
-                                <div id = "JS-Theem-dots">
-                                    <div data-mode = "light" id = "white-dot" class = "Js-dot"></div>
-                                    <div data-mode = "red" id = "red-dot" class = "Js-dot"></div>
-                                    <div data-mode = "black" id = "black-dot" class = "Js-dot"></div>
-                                    <div data-mode = "blue" id = "blue-dot" class = "Js-dot"></div>
-                                </div>
+<!--                                <h5 style="text-align: center;line-height: 0;">Some JS showcase</h5>-->
+<!--                                <div id = "JS-Theem-dots">-->
+<!--                                    <div data-mode = "light" id = "white-dot" class = "Js-dot"></div>-->
+<!--                                    <div data-mode = "red" id = "red-dot" class = "Js-dot"></div>-->
+<!--                                    <div data-mode = "black" id = "black-dot" class = "Js-dot"></div>-->
+<!--                                    <div data-mode = "blue" id = "blue-dot" class = "Js-dot"></div>-->
+<!--                                </div>-->
                             </div>
                     </div>
                 </div>
@@ -163,15 +163,23 @@
             <div class="main">
                 <h3 style="text-align: center;">Contact form</h3>
 
-                <form id = "contact_form" method="POST">
+                <form id = "contact_form" method="POST" action="{% url 'contact_page' %}">
                     {% csrf_token %}
-                    {{ form.as_p }}
+<!--                    <textarea name="Name" placeholder="Your Name..."></textarea>-->
+<!--                    <textarea name="Company" placeholder="Your Company..."></textarea>-->
+<!--                    <textarea name="Email" placeholder="Your Email..."></textarea>-->
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email...">
+                    <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="Company...">
+                    <textarea class="form-control" id="message" rows="3" placeholder="Message..."></textarea>
                     <input type="submit">
                 </form>
                 
             </div>
         </section>
-        <script type="text/javascript"> let static = "/static/styles" </script>
-        <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+<!--        <script type="text/javascript">-->
+<!--		    let static = "{% static 'styles' %}"-->
+<!--	    </script>-->
+
+<!--	    <script type="text/javascript" src="{% static 'js/script.js' %}"></script>-->
 </body>
 </html>
