some old migations

--- a/django/project/contact_form/templates/contact_form/contact_form.html
+++ b/django/project/contact_form/templates/contact_form/contact_form.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&display=swap" rel="stylesheet">
-
+    <link rel="icon" href="{% static 'icons/favicon.ico' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&family=Questrial&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
